--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,201 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta http-equiv="x-ua-compatible" content="ie=edge" />
-        <title>Dashboard</title>
 
-        <!-- Font Awesome -->
-        <link
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-            rel="stylesheet" />
-        <!-- Google Fonts -->
-        <link
-            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-            rel="stylesheet" />
-        <!-- MDB -->
-        <link
-            href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.css"
-            rel="stylesheet" />
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>Dashboard</title>
+    <link rel="stylesheet" href="style.css">
 
-    </head>
-    <body>
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.css" rel="stylesheet" />
 
-        <header>
-            <!-- Navbar -->
-            <nav class="navbar navbar-expand-lg navbar-light bg-white">
-                <div class="container-fluid">
-                    <button
-                        class="navbar-toggler"
-                        type="button"
-                        data-mdb-toggle="collapse"
-                        data-mdb-target="#navbarExample01"
-                        aria-controls="navbarExample01"
-                        aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <i class="fas fa-bars"></i>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarExample01">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#indicadores">Indicadores</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#graficos">Gráficos</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#datos">Datos</a>
-                            </li>
+</head>
 
-                        </ul>
-                    </div>
+<body>
+
+    <header>
+        <!-- Navbar -->
+        <nav id="cabeza" class="navbar navbar-expand-lg navbar-light ">
+            <div class="container-fluid">
+                <div>Climate Dashboard</div>
+                <div class="d-flex ">
+                    <p> Dereck Santander</p>
+                    <img class="perfil" width="65" height="65"
+                        src="https://img.icons8.com/arcade/64/user-male-circle.png" alt="user-male-circle" />
                 </div>
-            </nav>
-            <!-- Navbar -->
-        </header>
-
+            </div>
+        </nav>
+        <!-- Navbar -->
+    </header>
+    <div id="cuerpo">
         <!-- Indicadores -->
-        <section class="p-4 text-right bg-light">
-            <h4 id="indicadores" class="mb-3">
-                Indicadores 
-            </h4>
-            <h6 class="mb-3">YYYY-MM-DD</h6>
-            <div class="container">
-                <div class="row row-cols-1 row-cols-md-3 g-3 mt-2">
-                    <div class="col">
-                        <div class="card">
-                            <div class="card-body">
+        <section id="navegacion" class="p-4 text-right bg-light">
+            <div id="navbar">
+                <ul>
+                    <li class="nav-item">
+                        <div class="lista">
+
+                            <a class="nav-link" href="#indicadores">Indicadores</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <div class="lista">
+                            <a class="nav-link" href="#graficos">Gráficos</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <div class="lista">
+                            <a class="nav-link" href="#datos">Datos</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <div class="info">
+            <section class="p-4 text-right bg-light">
+                <h4 id="indicadores" class="mb-3">
+                    Indicadores
+                </h4>
+                <h6 class="mb-3">YYYY-MM-DD</h6>
+                <div class="container">
+                    <div class="row row-cols-1 row-cols-md-3 g-3 mt-2">
+                        <div id="precipitacion" class="col">
+                            <div class="card">
                                 <h5 class="card-title">Precipitación</h5>
-                                <p class="card-text">
+                                <div class="card-body">
+                                    <p class="card-text">
                                     <ul class="list-group list-group-light">
                                         <li id="precipitacionMinValue" class="list-group-item">Min 0.0 [mm]</li>
                                         <li id="precipitacionPromValue" class="list-group-item">Prom 0.0 [mm]</li>
                                         <li id="precipitacionMaxValue" class="list-group-item">Max 0.0 [mm]</li>
-                                      </ul>  
-                                </p>
+                                    </ul>
+                                    </p>
+                                    <img width="100" height="100"
+                                        src="https://img.icons8.com/external-microdots-premium-microdot-graphic/64/external-precipitation-weather-forecast-microdots-premium-microdot-graphic-2.png"
+                                        alt="external-precipitation-weather-forecast-microdots-premium-microdot-graphic-2" />
+
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col">
-                        <div class="card">
-                            <div class="card-body">
+                        <div id='UV' class="col">
+                            <div class="card">
+
                                 <h5 class="card-title">Uv</h5>
-                                <p class="card-text">
+                                <div class="card-body">
+                                    <p class="card-text">
                                     <ul class="list-group list-group-light">
                                         <li id="uvMinValue" class="list-group-item">Min 0.0 [--]</li>
                                         <li id="uvPromValue" class="list-group-item">Prom 0.0 [--]</li>
                                         <li id="uvMaxValue" class="list-group-item">Max 0.0 [--]</li>
-                                      </ul>  
-                                </p>
+                                    </ul>
+                                    </p>
+                                    <img width="100" height="100"
+                                        src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/external-uv-index-weather-flaticons-lineal-color-flat-icons-2.png"
+                                        alt="external-uv-index-weather-flaticons-lineal-color-flat-icons-2" />
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col">
-                        <div class="card">
-                            <div class="card-body">
+                        <div id='temperatura' class="col">
+                            <div class="card">
                                 <h5 class="card-title">Temperatura</h5>
-                                <p class="card-text">
+                                <div class="card-body">
+
+                                    <p class="card-text">
                                     <ul class="list-group list-group-light">
                                         <li id="temperaturaMinValue" class="list-group-item">Min 0.0 [°C]</li>
                                         <li id="temperaturaPromValue" class="list-group-item">Prom 0.0 [°C]</li>
                                         <li id="temperaturaMaxValue" class="list-group-item">Max 0.0 [°C]</li>
-                                      </ul>  
-                                </p>
+                                    </ul>
+                                    </p>
+                                    <img width="100" height="100"
+                                        src="https://img.icons8.com/clouds/100/temperature.png" alt="temperature" />
+
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-        <!-- Indicadores -->
+            </section>
+            <!-- Indicadores -->
 
-        <!-- Gráficos -->
-        <section class="p-4 text-right bg-light">
-            <h4 id="graficos" class="mb-3">
-                Gráficos
-            </h4>
-            <div class="container">
-                <div
-                    class="row d-flex justify-content-center row-cols-1 row-cols-md-1 g-4 mt-2">
-                    <div class="col">
-                        <canvas id="plot1"></canvas>
-                    </div>
-                    <div class="col">
-                        <canvas id="plot2"></canvas>
+            <!-- Gráficos -->
+            <section  class="p-4 text-right bg-light">
+                <h4 id="graficos" class="mb-3">
+                    Gráficos
+                </h4>
+                <div id="mapas" class="container">
+                    <div class="row d-flex justify-content-center row-cols-1 row-cols-md-1 g-4 mt-2">
+                        <div class="col">
+                            <canvas id="plot1"></canvas>
+                        </div>
+                        <div class="col">
+                            <canvas id="plot2"></canvas>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
-<!-- Gráficos -->
+            </section>
+            <!-- Gráficos -->
 
- <!-- Datos -->
-  <section class="p-4 text-right bg-light">
-      <h4 id="datos" class="mb-3">
-          Datos
-      </h4>
-      <div class="container">
+            <!-- Datos -->
+            <section class="p-4 text-right bg-light">
+                <h4 id="datos" class="mb-3">
+                    Datos
+                </h4>
+                <div class="container">
 
-          <div
-              class="row justify-content-end row-cols-6 row-cols-md-6 g-3 mt-2">
+                    <div class="row justify-content-end row-cols-6 row-cols-md-6 g-3 mt-2">
 
-              <div class="col">
-                  <select class="form-select form-select-lg mb-3"
-                      aria-label="Default select example">
-                      <option selected>Ciudades</option>
-                      <option value="Machala">Machala</option>
-                      <option value="Guayaquil">Guayaquil</option>
-                      <option value="Quito">Quito</option>
-                  </select>
-              </div>
+                        <div class="col">
+                            <select class="form-select form-select-lg mb-3" aria-label="Default select example">
+                                <option selected>Ciudades</option>
+                                <option value="Machala">Machala</option>
+                                <option value="Guayaquil">Guayaquil</option>
+                                <option value="Quito">Quito</option>
+                            </select>
+                        </div>
 
-          </div>
-          <div class="row row-cols-1 row-cols-md-1 g-3 mt-2">
-              <div class="col">
+                    </div>
+                    <div class="row row-cols-1 row-cols-md-1 g-3 mt-2">
+                        <div class="col">
 
-                  <div class="card">
-                      <div class="card-body">
-                          <h5 class="card-title">Pronóstico del tiempo
-                              para 5 días con datos cada 3 horas por
-                              ciudad</h5>
-                          <table id="forecast"
-                              class="table align-middle mb-0 bg-white">
-                              <thead class="bg-light">
-                                  <tr>
-                                      <th>Hora</th>
-                                      <th>Humedad [%]</th>
-                                      <th>Velocidad del viento [m/s]</th>
-                                      <th>Precipitación [--]</th>
-                                      <th>Presión [hPa]</th>
-                                      <th>Nubosidad [%]</th>
-                                  </tr>
-                              </thead>
-                              <tbody id="forecastbody">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Pronóstico del tiempo
+                                        para 5 días con datos cada 3 horas por
+                                        ciudad</h5>
+                                    <table id="forecast" class="table align-middle mb-0 bg-white">
+                                        <thead class="bg-light">
+                                            <tr>
+                                                <th>Hora</th>
+                                                <th>Humedad [%]</th>
+                                                <th>Velocidad del viento [m/s]</th>
+                                                <th>Precipitación [--]</th>
+                                                <th>Presión [hPa]</th>
+                                                <th>Nubosidad [%]</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="forecastbody">
 
-                              </tbody>
-                          </table>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </section>
-  <!-- Datos -->
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <!-- Datos -->
+    </div>
+    <!-- MDB -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js"></script>
 
-        <!-- MDB -->
-        <script
-            type="text/javascript"
-            src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js"></script>
+    <!-- Static data -->
+    <script type="module" src="public/javascript/static_data.js"></script>
 
-        <!-- Static data -->
-        <script type="module" src="public/javascript/static_data.js"></script>
+    <!-- Load data -->
+    <script type="module" src="public/javascript/load_data.js"></script>
 
-        <!-- Load data -->
-        <script type="module" src="public/javascript/load_data.js"></script>
+    <!-- Libreria Chart.js-->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 
-        <!-- Libreria Chart.js-->
-        <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+</body>
 
-    </body>
 </html>
