--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -125,7 +125,7 @@
             <!-- Indicadores -->
 
             <!-- Gráficos -->
-            <section  class="p-4 text-right bg-light">
+            <section class="p-4 text-right bg-light">
                 <h4 id="graficos" class="mb-3">
                     Gráficos
                 </h4>
@@ -190,8 +190,27 @@
                     </div>
                 </div>
             </section>
+            <!-- Datos -->
+            <!-- Tabla de mareas -->
+            <section class="p-4 text-right bg-light">
+                <h4 class="mb-3">
+                    Mapa de monitoreo de amenaza de inundaciones bajo pronóstico de precipitaciones
+                </h4>
+                <div class="container">
+                    <div class="row row-cols-1 row-cols-md-1 g-3 mt-2">
+                        <div class="col">
+                            <div class="card">
+                                <div id="monitoreo" class="card-body">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Tabla de mareas -->
         </div>
-        <!-- Datos -->
+    </div>
     </div>
     <!-- MDB -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js"></script>
